--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,8 @@ html {
 }
 
 .header {
-    background: rgb(177, 184, 243);
-    color: white;
+    background: rgb(100, 107, 171);
+    color: rgb(72, 61, 171);
     height: 80px;
     margin-bottom: 10px;
     margin-left: auto;
@@ -25,13 +25,13 @@ html {
 }
 
 .logo a {
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
 .navbar {
     background: rgb(13, 6, 117);
-    color: white;
+    color: rgb(255, 255, 255);
     width: 85vw;
     margin-left: auto;
     margin-right: auto;
@@ -50,7 +50,7 @@ html {
     text-decoration: none;
     display: block;
     padding: 15px;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 .navbar ul li a:hover {
