--- a/paginas/style/quienes_somos.css
+++ b/paginas/style/quienes_somos.css
@@ -5,19 +5,27 @@ de el navegador */
     margin: 0;
     padding: 0;
 }
-
-html {
+body{
+    background-color: rgb(137, 137, 137);
+    padding: auto
+}
+/* html {
     font-family: Arial, Helvetica, sans-serif, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 18px;
-}
+    
+
+} */
 
 tr, th, td{
-    border-color: black;
+    border-color: rgb(38, 34, 34);
     border-style: double;
 }
 img{
     border-radius: 1px;
 }
 th{
-    background-color: rgb(136, 149, 145);
+    background-color: rgb(34, 36, 36);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    color: aquamarine;
+    
 }
