modificado el total de contacto y clientes

--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,7 @@ html {
 
 .footer {
     margin-top: 25px;
-    background: #fff;
+    background: #ffffff;
     display: flex;
     justify-content: space-around;
 }
